AboutURLLoader: check for data pipe creation.

The class mojo::DataPipe shouldn't be used. In its constructor, it
CHECKs the data pipe is created. It can fails when system resources are
insufficient.

This CL replaces the mojo::DataPipe and handles the insuficient resource
case.

Note: No crash reports has been received so far because this URLLoader
      is not used often enough.

Bug: 911652
Change-Id: I09e9ec7cf883a3682466e528b6010fe326916400
Reviewed-on: https://chromium-review.googlesource.com/c/1355124
Commit-Queue: Arthur Sonzogni <arthursonzogni@chromium.org>
Reviewed-by: Camille Lamy <clamy@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#613562}(cherry picked from commit 7d0e43eb78120eca24250ad0a70a823d87b87dee [formerly 7d47a55b52ba95cb87b5f71087762f8eae06e6d9])
Reviewed-on: https://chromium-review.googlesource.com/c/1361873
Reviewed-by: Arthur Sonzogni <arthursonzogni@chromium.org>
Cr-Commit-Position: refs/branch-heads/3626@{#68}
Cr-Branched-From: 5302c6863bade38a5d283a7cce26a309d8e8e755 [formerly d897fb137fbaaa9355c0c93124cc048824eb1e65]-refs/heads/master@{#612437}
Former-commit-id: 964eb462f0ea0197c23511bb1976b7cfd4eaa065